# maestro

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.clinerules/workflows/: opsx-bulk-archive.md  opsx-continue.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-verify.md
apps/desktop/: AGENTS.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: boundary.rs  contracts.rs  dialogue.rs  evolution.rs  github.rs  ideas.rs  intent.rs  llm.rs  market_signals.rs  mod.rs  profiles.rs  validation.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/db/migrations/: 001_initial_schema.sql
apps/desktop/src-tauri/src/github/: client.rs  commit.rs  mod.rs
apps/desktop/src-tauri/src/llm/: config.rs  mod.rs  provider.rs  streaming.rs
apps/desktop/src-tauri/src/sync/: queue.rs  worker.rs
apps/docs/: LEARNINGS.md  PRE_CONFIG_AUDIT.md  RESEARCH_BRIEF.md  SESSION_HANDOFF.md  TUTORIAL_OUTLINE.md  TUTORIAL_PLANNING.md  next.config.mjs  package.json
docs/: functional-e2e-test-case.md  real-case-design-guide.md
docs/architecture/: vision.md
docs/references/: AGENTS.md  IMPLEMENTATION-CHECKLIST.md  SPEC.md  (+1 more)
openspec/: AGENTS.md  config.yaml
scripts/: db-verify.sh  functional-e2e-check.mjs  gen-types.mjs  trigger-bootstrap.sh
(+298 files in other folders)
