[package]
name = "maestro-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "=2.6.2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.11.0", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
